# LangChain-Text-Anolyzer

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2025_12_30_1625-fe3fb831e7cc_add_ai_message_log.py
app/core/: config.py  dependencies.py
app/db/: database.py
app/infra/: ai_providers.py
app/interfaces/: ai_client.py
app/models/: ai.py
app/routers/: ai.py
app/runner/: setup.py
app/services/: ai_service.py  chat_service.py  prompts.py
